# tui-explorer

./: Cargo.toml  LICENSE  README.md
locales/de/: main.ftl
locales/en-US/: main.ftl
locales/fr/: main.ftl
src/: filesystem.rs  input.rs  lib.rs  main.rs
