[package]
name = "tui-explorer"
version = "0.2.2"
license = "MIT"
edition = "2021"
description = "A file explorer for a command line interface"
repository = "https://github.com/Programmer337/tui-explorer"
keywords = ["explorer", "CLI", "TUI", "filemanager"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"   


[dependencies]
fluent-templates = "0.9.4"
unic-langid = "0.9.5"
